fix: table overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,3 +7,6 @@
 }
 @tailwind components;
 @tailwind utilities;
+.my-shadow{
+    box-shadow: #ffffff26 0 0 0 1px, #32325d45 0 80px 120px -20px, #0000004d 0 30px 60px -10px;
+  }
